# DaGame-SFML-ver

./: .gitignore  CMakeLists.txt  README.md
old/: App.h  Grid.h  Scene.h  framework.h
src/: App.cpp  App.h  AppClient.cpp  AppClient.h  AppServer.cpp  AppServer.h  Grid.cpp  Player.cpp  Player.h  Scene.cpp  Scene.h  framework.h  main.cpp
src/Common/: Globals.cpp  Globals.h  Object.cpp  Object.h  Player.cpp  Player.h
src/Common/Base/: NetworkObject.cpp  NetworkObject.h  Object.cpp  Object.h  UITextElement.cpp  UITextElement.h
src/Common/Systems/: NetPacket.h  PacketType.h  PhysicsManager.cpp  PhysicsManager.h  RenderManager.cpp  RenderManager.h
src/Common/Systems/Managers/: PhysicsManager.cpp  PhysicsManager.h  RenderManager.cpp  RenderManager.h  SceneManager.cpp  SceneManager.h  UIManager.h
src/Common/Systems/Managers/Base/: BaseManager.cpp  BaseManager.h  ObjectManager.cpp  ObjectManager.h
src/Common/Systems/Managers/Network/: NetworkManager.cpp  NetworkManager.h
src/Common/Systems/Managers/Objects/: ObjectManager.cpp  ObjectManager.h
src/Common/Systems/Managers/UI/: UIManager.cpp  UIManager.h
src/Game/: Ball.cpp  Ball.h  MainScene.cpp  MainScene.h  Paddle.cpp  Paddle.h
src/Game/Objects/: Ball.cpp  Ball.h  Paddle.cpp  Paddle.h
src/Game/Objects/Gameplay/: Ball.cpp  Ball.h  Paddle.cpp  Paddle.h
src/Game/Objects/UI/: DT.cpp  DT.h  FPSCounter.cpp  FPSCounter.h
src/Game/Objects/UI/Debug/: DT.h  DTFixedTime.cpp  DTFixedTime.h  FPSCounter.h
src/Game/Objects/UI/Score/: ScoreUi.cpp  ScoreUi.h
src/Network/: MainNetwork.cpp  MainNetwork.h  NetworkShape.cpp  NetworkShape.h  NetworkTransform.cpp  NetworkTransform.h  NetworkTransformable.cpp  NetworkTransformable.h  UDPCommunicator.cpp  UDPCommunicator.h
